<resources>
    <string name="app_name">CITU Messenger</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">CITU Messenger | Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_schoolID">School ID</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="idNumber">School ID</string>
    <string name="wholeName">Whole Name</string>
    <string name="firstName">First Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="nickNameText">Nick Name</string>
    <string name="emailAddText">Email Address</string>
    <string name="courseText">Course</string>
    <string name="prompt_preview_text">Preview</string>
    <string name="promt_cancel_text">Cancel</string>
    <string name="title_activity_test">Test</string>

</resources>
