<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cebuinstituteoftechnology_university.citumessenger.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id = "@+id/scroll"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/previewText">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view7"
            android:text="@string/action_register_short"
            />

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idNummber"
            android:hint="@string/idNumber"
             />

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:hint="@string/firstName"
            />

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:hint="@string/lastNameText"
            />
        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course"
            android:hint="@string/courseText"
            />
        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nickName"
            android:hint="@string/nickNameText"
            />

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailAddress"
            android:hint="@string/prompt_schoolID"
             />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/prompt_password"/>
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPassword"
            android:hint="@string/prompt_conf_password"/>

    </LinearLayout>

    </ScrollView>
    <android.support.v7.internal.widget.DialogTitle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previewText"
        android:text="@string/prompt_preview_text"
        android:layout_above="@+id/previewCard"
        android:layout_centerHorizontal="true" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:id="@+id/previewCard"
        android:layout_gravity="top|center_horizontal"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/cancelButton">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/previewImage"
            android:src ="@drawable/default_image"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/previewImage"
            android:layout_toEndOf="@+id/previewImage">


            android:layout_toEndOf="@+id/previewImage"
            android:layout_toRightOf="@+id/previewImage"
            android:padding="5dp"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jownjie"
                android:layout_gravity="center_horizontal"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastNameText"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sumaelnog"
                android:layout_gravity="center_horizontal"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_schoolID"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nice ka one"
                android:layout_gravity="center_horizontal"
                android:textSize="13dp" />
        </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>





    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:text="@string/promt_cancel_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:text="@string/action_register_short"
        android:layout_alignTop="@+id/cancelButton"
        android:layout_toLeftOf="@+id/cancelButton"
        android:layout_toStartOf="@+id/cancelButton" />

</RelativeLayout>
